spacing fix

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -22,6 +22,7 @@ body {
   -ms-font-feature-settings: "kern", "liga", "clig", "calt";
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
+  background-color: black;
 }
 article,
 aside,
